Apply the same behavior of app list shelf button to search key

Changes:
Extract logic triggered by app list shelf button into common function
which is also used by search key.

Bug: 896895
Change-Id: Ie81ef2aee94cc56270842887c7554297b1a94575
Reviewed-on: https://chromium-review.googlesource.com/c/1313057
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604971}
Former-commit-id: 9a7f768cd91aa03ad3db92efa733b86ca9c26df1